# mcuTask

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Kconfig.compile  Readme.md  RoadMap.md  board_cfg.cmake
base/: CMakeLists.txt  Kconfig  Readme.md  assert.h  barrier.h  bitops.c  bitops.h  byteorder.h  check_op.h  cleanup.h  compiler-clang.h  compiler-gcc.h  compiler-intel.h  compiler-version.h  compiler.h  compiler_attributes.h  compiler_types.h  errno.h  fsm.c  fsm.h  generic.h  hrtimer_.h  ilog2.h  linker.h  log.c  log.h  malloc.h  minmax.h  osal.h  printer.h  rwonce.h  symbol.c  symbol.h  toolchain.h
base/algorithm/: qsort.h
base/arch/arm/base/: prefetch.h  rte_atomic.h  rte_cpu.h  rte_io.h  rte_pause.h  rte_prefetch.h
base/arch/generic/: prefetch.h  rte_atomic.h  rte_io.h  rte_pause.h  rte_stdatomic.h
base/arch/x86/basework/: rte_atomic.h  rte_cpu.h  rte_pause.h
base/container/: CMakeLists.txt  circbuf.h  kfifo.c  kfifo.h  list.h  observer.c  observer.h  pfifo.h  queue.h  radix-tree.c  radix-tree.h  rb.h
base/container/graph/: graph.c  graph_ops.c  graph_private.h  node.c  rte_graph.h
base/container/rbtree/: rb.h  rb_append.c  rb_extract.c  rb_impl.h  rb_insert.c  rb_iterate.c  rb_max.c  rb_min.c  rb_next.c  rb_postorder.c  rb_prepend.c  rb_prev.c  rb_replace.c  tree.h
base/container/ring/: CMakeLists.txt  rte_ring.c  rte_ring.h  rte_ring_c11_pvt.h  rte_ring_core.h  rte_ring_elem.h  rte_ring_elem_pvt.h  rte_ring_generic_pvt.h  rte_ring_hts.h  rte_ring_hts_elem_pvt.h  rte_ring_peek.h  rte_ring_peek_elem_pvt.h  rte_ring_peek_zc.h  rte_ring_rts.h  rte_ring_rts_elem_pvt.h
base/containers/: linked_list.h
base/lib/: CMakeLists.txt  Kconfig  bitops.c  crc.h  fnmatch.c  iovpr.h  iovprintf.c  libassert.c  libcrc16.c  libcrc32.c  libitoa.c  libstring.c  printer.c  printer.h  ring_buffer.c  string.h
base/os/: os_threadx.h
base/sys/: CMakeLists.txt  Kconfig  Kconfig.crc  atomic.h  atomic_arch.h  atomic_builtin.h  atomic_c.h  atomic_types.h  byteorder.h  crc.h  crc16_sw.c  crc24_sw.c  crc32_sw.c  crc32c_sw.c  crc4_sw.c  crc7_sw.c  crc8_sw.c  hex.c  iterable_sections.h  ring_buffer.h  util.h  util_internal.h  util_internal_is_eq.h  util_internal_util_dec.h  util_internal_util_inc.h  util_internal_util_x2.h  util_listify.h  util_loops.h  util_macro.h
base/toolchain/: common.h  gcc.h  llvm.h
base/trace/: CMakeLists.txt  kasan.c  kasan.h
board/linux_x86/: CMakeLists.txt  Kconfig  basework_config.h  defconfig  gdbinit  linker.ld  main.c  ram_blkdev.c  tx_user.h
board/shared/: CMakeLists.txt  Kconfig  cppnew.cc  cstub.c  device.c  heap.c  init_array.c  irq.c  kmalloc.c  malloc.c  memory.c  nanosleep.c  object_pool.c  platform.c  shared_symbol.c  sysinit.c  task_runner.c  taskrunner.c  thread_foreach.c  tx_api_extension.h
board/shared/cortexm/: CMakeLists.txt  Kconfig  cache.c  dwt.c  dwt.h
board/shared/cortexm/backtrace/: cm_backtrace.c  cm_backtrace.h
board/shared/drivers/: CMakeLists.txt  blkdev.h  device.h  display.h  dma.h  fx_sd.c  gpio.h  i2c.h  spi.h  uart.h  uart_async_rx.c  uart_async_rx.h
board/shared/drivers/sdio/: mmc.h  mmcsd_core.h  sd.h  sdio.h  sdio_func_ids.h
board/shared/kconfig/: Kconfig  Kconfig.dma  Kconfig.uart
board/shared/service/: cache.h  heap.h  init.h  irq.h  malloc.h  printk.h  start.h
board/shared/sys/: atomic.h  atomic_builtin.h
board/stm32/h750_core/: CMakeLists.txt  Kconfig  com_service.c  defconfig  linker.ld  main.c  stm32_crc.c  stm32_dma.c  stm32_dma.h  stm32_gpio.c  stm32_gpiokey.c  stm32_hrtimer.c  stm32_i2c.c  stm32_leds.c  stm32_pins.c  stm32_qflash.c  stm32_sdmmc.c  stm32_serial.c  stm32_spi.c  stm32_startup.c  stm32_uart.c  stm32_usbdevice.c  stm32_usbhost.c  stm32_usbmsc.c  system_stm32h7xx.c  tx_user.h
board/stm32/h750_core/port/: fx_user.h
board/stm32/h750_core/usbx_stm32_host_controllers/: readme.txt
rtos/: CMakeLists.txt  FileX.cmake  Kconfig  Kconfig.filex  Kconfig.levelx  Kconfig.threadx  Kconfig.usbx  LevelX.cmake  Netxduo.cmake  ThreadX.cmake  UsbX.cmake  threadx_symbol.c
rtos/cmake/: FileX.cmake  LevelX.cmake  Netxduo.cmake  ThreadX.cmake  UsbX.cmake
rtos/configs/: Kconfig.netxduo  fx_user_config.h  lx_user_config.h  nx_user_config.h  tx_user_config.h  ux_user_config.h
rtos/filex/: CMakeLists.txt  LICENSE.txt  README.md  SECURITY.md
rtos/filex/common/: CMakeLists.txt
rtos/filex/common/inc/: fx_api.h  fx_directory.h  fx_fault_tolerant.h  fx_media.h  fx_user_sample.h  fx_utility.h
rtos/filex/common/src/: fx_directory_attributes_set.c  fx_directory_create.c  fx_directory_default_get_copy.c  fx_directory_default_set.c  fx_directory_delete.c  (+69 more)
rtos/levelx/: CMakeLists.txt  README.md  SECURITY.md
rtos/levelx/common/: CMakeLists.txt
rtos/netxduo/: CMakeLists.txt  README.md  SECURITY.md
rtos/netxduo/addons/: CMakeLists.txt
rtos/netxduo/common/: CMakeLists.txt
rtos/netxduo/crypto_libraries/: CMakeLists.txt
rtos/netxduo/nx_secure/: CMakeLists.txt
rtos/netxduo/tsn/: CMakeLists.txt
rtos/threadx/: CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
rtos/threadx/test/: .gitignore
rtos/usbx/: CMakeLists.txt  README.md  SECURITY.md
rtos/usbx/common/: CMakeLists.txt
rtos/usbx/samples/: demo_usbx.c
stm32/ART-PI/: CMakeLists.txt  linker.ld  main.c  startup.c  stm32_exception.c  stm32_platform.c  stm32_startup.c  stm32_uart.c  tx_api_extension.h  tx_user.h
stm32/Drivers/: CMakeLists.txt
subsys/shell/: CMakeLists.txt  Kconfig  shell.c  shell.h  shell_adsp_memory_window.h  shell_backend.h  shell_cmds.c  shell_dummy.h  shell_fprintf.c  shell_fprintf.h  shell_help.c  shell_help.h  shell_history.c  shell_history.h  shell_log_backend.c  shell_log_backend.h  shell_ops.c  shell_ops.h  shell_rtt.h  shell_section.c  shell_string_conv.h  shell_types.h  shell_uart.h  shell_utils.c  shell_utils.h  shell_vt100.h  shell_wildcard.c  shell_wildcard.h
subsys/shell/backends/: CMakeLists.txt  Kconfig.backends  shell_dummy.c  shell_rtt.c  shell_uart.c
subsys/shell/modules/: CMakeLists.txt  Kconfig  date_service.c  device_service.c  devmem_service.c  shell_mem.c  shell_thread.c
(+2972 files in other folders)
