include_dirs(${PROJECT_BINARY_DIR})

add_subdirectory(threadx)
add_subdirectory_ifdef(CONFIG_FILEX   filex)
add_subdirectory_ifdef(CONFIG_NETX    netxduo)
add_subdirectory_ifdef(CONFIG_USBX    usbx)
add_subdirectory_ifdef(CONFIG_LEVELX  levelx)

# include(${CMAKE_CURRENT_SOURCE_DIR}/ThreadX.cmake)

# if (CONFIG_FILEX)
#     include(${CMAKE_CURRENT_SOURCE_DIR}/FileX.cmake)
# endif()
# if (CONFIG_NETX)
#     include(${CMAKE_CURRENT_SOURCE_DIR}/Netxduo.cmake)
# endif()
# if (CONFIG_USBX)
# include(${CMAKE_CURRENT_SOURCE_DIR}/UsbX.cmake)
# endif()
# if (CONFIG_LEVELX)
# include(${CMAKE_CURRENT_SOURCE_DIR}/LevelX.cmake)
# endif()
