add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/core)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/usbx_device_classes)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/usbx_host_classes)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/usbx_host_controllers)
if (CONFIG_NETX)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/usbx_network)
endif()
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/usbx_pictbridge)
